--- a/src/components/Navigation/index.scss
+++ b/src/components/Navigation/index.scss
@@ -17,6 +17,7 @@
     justify-content: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
       sans-serif;
+    border-right: 1px solid #333;
 
     svg {
       height: 30%;
