--- a/src/components/Screen/index.scss
+++ b/src/components/Screen/index.scss
@@ -35,6 +35,13 @@
   display: flex;
   border-radius: 3px;
   position: relative;
+  align-items: center;
+  justify-content: center;
+
+  img {
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .exit {
@@ -43,6 +50,7 @@
   align-items: center;
   justify-content: center;
   right: 0;
+  top: 0;
   font-size: 100%;
   width: 15px;
   height: 15px;
@@ -61,4 +69,19 @@
   justify-content: center;
   width: 100%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.wrapper {
+  border: 1px solid red;
+  height: 90%;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
